@@ -1,3 +1,7 @@
+Feb 18, 2015 - chris ---------------------------------------------------
+o When reading records from mmapped storage, a pointer into the storage
+	is returned and the record data is no longer copied
+
 Feb 03, 2015 - chris ---------------------------------------------------
 o Default compilation flag is now -O3
 
